--- a/upload.html
+++ b/upload.html
@@ -5,6 +5,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Upload Post</title>
   <style>
+    .font-size-dropdown {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      background: #f5f7fa;
+      border-radius: 6px;
+      padding: 4px 10px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.04);
+    }
+    select {
+      border: 1.5px solid #b3c7e6;
+      border-radius: 5px;
+      padding: 7px 18px 7px 8px;
+      background-color: #fff;
+      color: #222;
+      font-size: 15px;
+      outline: none;
+      transition: border 0.2s, box-shadow 0.2s;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.03);
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      margin: 0;
+    }
+    select:focus {
+      border-color: #4fc3f7;
+      box-shadow: 0 0 0 2px #b3e5fc;
+    }
+    .font-size-dropdown select {
+      margin: 0;
+      min-width: 110px;
+    }
+    .custom-navbar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #ccc;
+      padding: 15px 30px;
+      margin-bottom: 40px;
+      border-radius: 0 0 8px 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.04);
+    }
+    .custom-navbar .logo {
+      flex: 0 0 auto;
+      font-size: 24px;
+      font-weight: bold;
+      margin-right: 40px;
+    }
+    .custom-navbar .nav-buttons {
+      display: flex;
+      align-items: center;
+      gap: 18px;
+    }
+    .custom-navbar .back {
+      background-color: #81c995;
+      border: none;
+      border-radius: 5px;
+      padding: 8px 18px;
+      font-size: 15px;
+      cursor: pointer;
+      margin-right: 10px;
+    }
+    .custom-navbar .selectors {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .custom-navbar select {
+      border-radius: 5px;
+      padding: 5px 10px;
+      font-size: 15px;
+      border: 1px solid #bbb;
+      background: #fff;
+    }
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -112,13 +186,59 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <div class="navbar">
+  <div class="navbar custom-navbar">
     <div class="logo">李</div>
     <div class="nav-buttons">
-      <button class="back" onclick="window.location.href='index.html'">Back to Home</button>
-      
+      <button class="back" onclick="window.location.href='uploadprep.html'">Back </button>
+      <div class="settings-dropdown" style="position: relative; display: inline-block; margin-left: 10px;">
+        <button class="settings" onclick="toggleSettingsDropdown()" title="Settings" style="background-color: #ffd966; color: #222; border-radius: 5px; padding: 10px 20px; border: none; font-size: 15px; cursor: pointer; transition: background 0.2s; min-width: 120px;">
+          <span style="vertical-align: middle;">&#9881; Settings</span>
+        </button>
+        <div id="settingsDropdown" class="dropdown-content" style="display: none; position: absolute; right: 0; background: #fffbe6; min-width: 200px; box-shadow: 0 2px 8px rgba(0,0,0,0.12); border-radius: 8px; z-index: 100; padding: 16px 18px 12px 18px;">
+          <div class="font-size-dropdown" style="margin-bottom: 12px;">
+            <select id="fontSizeSelect" style="border-radius: 5px; padding: 5px; width:100%;">
+              <option value="14px">Small</option>
+              <option value="16px" selected>Medium</option>
+              <option value="18px">Large</option>
+              <option value="20px">Extra Large</option>
+            </select>
+          </div>
+          <div style="margin-bottom: 0;">
+            <select id="langSelect" style="border-radius: 5px; padding: 5px; width:100%;">
+              <option value="en">English</option>
+              <option value="id">Bahasa Indonesia</option>
+              <option value="zh">中文 (Mandarin)</option>
+            </select>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+  <script>
+    // Settings dropdown logic (copied from front page)
+    function toggleSettingsDropdown() {
+      const dropdown = document.getElementById('settingsDropdown');
+      dropdown.style.display = (dropdown.style.display === 'block') ? 'none' : 'block';
+    }
+    // Hide dropdown when clicking outside
+    document.addEventListener('click', function(event) {
+      const dropdown = document.getElementById('settingsDropdown');
+      const settingsBtn = document.querySelector('.settings');
+      if (!dropdown || !settingsBtn) return;
+      if (!dropdown.contains(event.target) && !settingsBtn.contains(event.target)) {
+        dropdown.style.display = 'none';
+      }
+    });
+    // Font size and language logic
+    document.getElementById('settingsDropdown').addEventListener('change', function(e) {
+      if (e.target && e.target.id === 'fontSizeSelect') {
+        document.body.style.fontSize = e.target.value;
+      }
+      if (e.target && e.target.id === 'langSelect') {
+        translatePage(e.target.value);
+      }
+    });
+  </script>
 
   <!-- Upload Container -->
   <div class="upload-container">
@@ -179,57 +299,163 @@
   </div>
 
   <script>
-    function previewImage(event, previewId) {
-      const file = event.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-          document.getElementById(previewId).src = e.target.result;
-        };
-        reader.readAsDataURL(file);
+    // Font size selector logic
+    document.getElementById('fontSizeSelect').addEventListener('change', function() {
+      document.body.style.fontSize = this.value;
+    });
+
+    // Translation dictionary (minimal for demo, expand as needed)
+    const translations = {
+      en: {
+        'Back to Home': 'Back to Home',
+        'Small': 'Small',
+        'Medium': 'Medium',
+        'Large': 'Large',
+        'Extra Large': 'Extra Large',
+        'English': 'English',
+        'Bahasa Indonesia': 'Bahasa Indonesia',
+        '中文 (Mandarin)': '中文 (Mandarin)'
+      },
+      id: {
+        'Back to Home': 'Kembali ke Beranda',
+        'Small': 'Kecil',
+        'Medium': 'Sedang',
+        'Large': 'Besar',
+        'Extra Large': 'Sangat Besar',
+        'English': 'Inggris',
+        'Bahasa Indonesia': 'Bahasa Indonesia',
+        '中文 (Mandarin)': '中文 (Mandarin)'
+      },
+      zh: {
+        'Back to Home': '返回首页',
+        'Small': '小',
+        'Medium': '中',
+        'Large': '大',
+        'Extra Large': '特大',
+        'English': '英语',
+        'Bahasa Indonesia': '印尼语',
+        '中文 (Mandarin)': '中文 (普通话)'
+      }
+    };
+
+    // Store original text for translation
+    function storeOriginalText(el) {
+      if (el.nodeType === 3) {
+        if (!el._originalText) {
+          el._originalText = el.nodeValue;
+        }
+      } else if (el.nodeType === 1) {
+        if (["SCRIPT", "STYLE"].includes(el.tagName)) return;
+        if ((el.tagName === 'OPTION' || el.tagName === 'BUTTON') && !el._originalText) {
+          el._originalText = el.textContent;
+        }
+        if (el.placeholder && !el._originalPlaceholder) {
+          el._originalPlaceholder = el.placeholder;
+        }
+        Array.from(el.childNodes).forEach(storeOriginalText);
       }
     }
 
-    // Allow clicking on the image to trigger the file input for all slots
-    for (let i = 1; i <= 5; i++) {
-      const img = document.getElementById(`previewImage${i}`);
-      const input = document.getElementById(`postImage${i}`);
-      if (img && input) {
-        img.addEventListener('click', function() {
-          input.click();
-        });
-      }
-    }
-
-    document.getElementById('uploadForm').addEventListener('submit', async function(event) {
-      event.preventDefault();
-      const images = [];
-      for (let i = 1; i <= 5; i++) {
-        const fileInput = document.getElementById(`postImage${i}`);
-        if (fileInput && fileInput.files[0]) {
-          // For demo, just use the file name. For real images, you'd need to upload or encode as base64.
-          images.push(fileInput.files[0].name);
+    function translatePage(lang) {
+      function translateElementText(el) {
+        if (el.nodeType === 3) {
+          const original = el._originalText || el.nodeValue;
+          const trimmed = original.trim();
+          if (translations[lang][trimmed]) {
+            el.nodeValue = original.replace(trimmed, translations[lang][trimmed]);
+          } else {
+            el.nodeValue = original;
+          }
+        } else if (el.nodeType === 1) {
+          if (["SCRIPT", "STYLE"].includes(el.tagName)) return;
+          if (el.tagName === 'OPTION' || el.tagName === 'BUTTON') {
+            const original = el._originalText || el.textContent;
+            const trimmed = original.trim();
+            if (translations[lang][trimmed]) {
+              el.textContent = translations[lang][trimmed];
+            } else {
+              el.textContent = original;
+            }
+          }
+          if (el.placeholder) {
+            const original = el._originalPlaceholder || el.placeholder;
+            if (translations[lang][original]) {
+              el.placeholder = translations[lang][original];
+            } else {
+              el.placeholder = original;
+            }
+          }
+          Array.from(el.childNodes).forEach(translateElementText);
         }
       }
-      const post = {
-        images,
-        description: document.getElementById('postDescription').value,
-        area: document.getElementById('postArea').value,
-        category: document.getElementById('postCategory').value,
-        type: document.getElementById('postType').value,
-        condition: document.getElementById('postCondition').value,
-        expiration: document.getElementById('postExpiration').value,
-        createdAt: new Date().toISOString()
-      };
+      translateElementText(document.body);
+    }
 
-      await fetch('http://localhost:3001/posts', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(post)
+    document.addEventListener('DOMContentLoaded', function() {
+      storeOriginalText(document.body);
+      const lang = document.getElementById('langSelect').value;
+      translatePage(lang);
+
+      // --- Main upload logic moved here ---
+      function previewImage(event, previewId) {
+        const file = event.target.files[0];
+        if (file) {
+          const reader = new FileReader();
+          reader.onload = function(e) {
+            document.getElementById(previewId).src = e.target.result;
+          };
+          reader.readAsDataURL(file);
+        }
+      }
+      window.previewImage = previewImage;
+
+      // Allow clicking on the image to trigger the file input for all slots
+      for (let i = 1; i <= 5; i++) {
+        const img = document.getElementById(`previewImage${i}`);
+        const input = document.getElementById(`postImage${i}`);
+        if (img && input) {
+          img.addEventListener('click', function() {
+            input.click();
+          });
+        }
+      }
+
+      document.getElementById('uploadForm').addEventListener('submit', async function(event) {
+        event.preventDefault();
+        const images = [];
+        for (let i = 1; i <= 5; i++) {
+          const fileInput = document.getElementById(`postImage${i}`);
+          if (fileInput && fileInput.files[0]) {
+            // For demo, just use the file name. For real images, you'd need to upload or encode as base64.
+            images.push(fileInput.files[0].name);
+          }
+        }
+        const description = document.getElementById('postDescription').value;
+        const post = {
+          title: description.substring(0, 20) + (description.length > 20 ? '...' : ''),
+          images,
+          description,
+          area: document.getElementById('postArea').value,
+          category: document.getElementById('postCategory').value,
+          type: document.getElementById('postType').value,
+          condition: document.getElementById('postCondition').value,
+          expiration: document.getElementById('postExpiration').value,
+          createdAt: new Date().toISOString()
+        };
+
+        await fetch('http://localhost:3001/api/posts', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(post)
+        });
+
+        alert('Post created successfully!');
+        window.location.href = 'index.html';
       });
-
-      alert('Post created successfully!');
-      window.location.href = 'index.html';
+      // --- End main upload logic ---
+    });
+    document.getElementById('langSelect').addEventListener('change', function() {
+      translatePage(this.value);
     });
   </script>
 </body>
